--- a/index.html
+++ b/index.html
@@ -118,17 +118,32 @@
         <div class="ideas__container">
           <h2 class="ideas__title">Идеи потребителей</h2>
           <div class="scroll-pane">
-            <div class="ideas__slide ideas__slide--desktop">
-              <h3 class="ideas__author">Марина Павлова</h3>
-              <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
-            </div>
-            <div class="ideas__slide ideas__slide--desktop">
-              <h3 class="ideas__author">Дмитрий</h3>
-              <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
-            </div>
-            <div class="ideas__slide ideas__slide--desktop">
-              <h3 class="ideas__author">Андрей Иванов</h3>
-              <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
+            <div class="ideas__wrapper">
+              <div class="ideas__slide ideas__slide--desktop">
+                <h3 class="ideas__author">Марина Павлова</h3>
+                <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
+              </div>
+              <div class="ideas__slide ideas__slide--desktop">
+                <h3 class="ideas__author">Дмитрий</h3>
+                <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
+              </div>
+              <div class="ideas__slide ideas__slide--desktop">
+                <h3 class="ideas__author">Андрей Иванов</h3>
+                <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
+              </div>
+              <div class="ideas__slide ideas__slide--desktop">
+                <h3 class="ideas__author">Марина Павлова</h3>
+                <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
+              </div>
+              <div class="ideas__slide ideas__slide--desktop">
+                <h3 class="ideas__author">Дмитрий</h3>
+                <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
+              </div>
+              <div class="ideas__slide ideas__slide--desktop">
+                <h3 class="ideas__author">Андрей Иванов</h3>
+                <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
+              </div>
             </div>
           </div>
           <div class="ideas__btn ideas__btn--prev"></div>
@@ -297,28 +312,28 @@
         <h2 class="visually-hidden">Статистика</h2>
         <ul class="stat__list">
           <li class="stat__item">
-            <svg class="contacts__icon" width="95" height="95" aria-label="Community">
+            <svg class="stat__icon" width="95" height="95" aria-label="Community">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#community"></use>
             </svg>
             <span class="stat__value">3890</span>
             <span class="stat__description">людей, которые продвигают наши идеи</span>
           </li>
           <li class="stat__item">
-            <svg class="contacts__icon" width="95" height="95" aria-label="Community">
+            <svg class="stat__icon" width="95" height="95" aria-label="Community">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#vegetarian"></use>
             </svg>
             <span class="stat__value">285</span>
             <span class="stat__description">подсчитаных карт блюд</span>
           </li>
           <li class="stat__item">
-            <svg class="contacts__icon" width="95" height="95" aria-label="Community">
+            <svg class="stat__icon" width="95" height="95" aria-label="Community">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#deal"></use>
             </svg>
             <span class="stat__value">28</span>
             <span class="stat__description">заведений, желающих с нами сотрудничать</span>
           </li>
           <li class="stat__item">
-            <svg class="contacts__icon" width="95" height="95" aria-label="Community">
+            <svg class="stat__icon" width="95" height="95" aria-label="Community">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#team-icon"></use>
             </svg>
             <span class="stat__value">18</span>
@@ -338,7 +353,7 @@
               <img src="images/result1.jpg" alt="" class="result__photo" width="585" height="467">
               <div class="result__description">
                 <h3 class="result__name">Vegetable cafe</h3>
-                <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione </p>
                 <a href="" class="result__link">Перейти на сайт</a>
               </div>
             </div>
@@ -346,7 +361,7 @@
               <img src="images/result1.jpg" alt="" class="result__photo" width="585" height="467">
               <div class="result__description">
                 <h3 class="result__name">Meat restaurant</h3>
-                <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione</p>
                 <a href="" class="result__link">Перейти на сайт</a>
               </div>
             </div>
@@ -409,7 +424,7 @@
           <p class="contacts__data contacts__data--social">
             <a href="">
               <svg class="contacts__icon" width="26" height="26" aria-label="fb">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook-app-logo"></use>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use>
               </svg>Наша страница в Facebook
             </a>
           </p>
@@ -467,7 +482,10 @@
         },
       });
       $(function() {
-	      $('.scroll-pane').jScrollPane();
+	      $('.scroll-pane').jScrollPane({
+          showArrows: false,
+          verticalGutter: 20
+        });
       });
     </script>
     <script src="js/custom.js"></script>
