Доработка по замечаниям дизайнера

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery.mousewheel.js"></script>
-    <script type="text/javascript" src="js/jquery.jscrollpane.min.js"></script>
-    <script type="text/javascript" src="js/swiper.min.js"></script>
-    <script type="text/javascript" src="js/myfirst.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.mousewheel.js"></script>
+    <script src="js/jquery.jscrollpane.min.js"></script>
+    <script src="js/swiper.min.js"></script>
+    <script src="js/myfirst.js"></script>
 
     <!-- Pixel Glass -->
     <style>
@@ -145,7 +145,7 @@
           </div>
           <div class="ideas__btn ideas__btn--prev"></div>
           <div class="ideas__btn ideas__btn--next"></div>
-          <a href="" class="ideas__link">Написать нам</a>
+          <a href="#contacts" class="ideas__link">Написать нам</a>
         </div>
       </section>
 
@@ -385,9 +385,6 @@
         </div>
       </section>
 
-    </main>
-
-    <footer class="footer">
       <section class="contacts" id="contacts">
         <div class="contacts__container">
           <h2 class="contacts__title">Свяжитесь с нами</h2>
@@ -429,12 +426,15 @@
             </a>
           </p>
         </div>
-        <div class="footer__container">
-          <div class="footer__copyright">© 2018 - Все права защищены</div>
-          <div class="footer__creator">Design by Elena Mykytyuk</div>
-          <div class="footer__creator">Developed by <a class="footer__link" href="https://olgaduka.github.io/MyPortfolio/">Olga Duka</a></div>
-        </div>
       </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__copyright">© 2018 - Все права защищены</div>
+        <div class="footer__creator">Design by <a class="footer__link" href="https://www.behance.net/elena-mykytyuk">Elena Mykytyuk</a></div>
+        <div class="footer__creator">Developed by <a class="footer__link" href="https://olgaduka.github.io/MyPortfolio/">Olga Duka</a></div>
+      </div>
     </footer>
 
     <!-- Scroll to top -->
