--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
     <title>Food&Diabetes</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/swiper.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.mousewheel.js"></script>
-    <script src="js/jquery.jscrollpane.min.js"></script>
-    <script src="js/swiper.min.js"></script>
-    <script src="js/myfirst.js"></script>
 
     <!-- Pixel Glass -->
     <style>
@@ -42,10 +37,10 @@
       <div class="header__top">
         <div class="header__panel">
           <div class="header__logo"></div>
-          <button class="header__toggle" type="button"></button>
+          <button class="header__toggle header__toggle--cross" type="button"></button>
         </div>
         <nav class="header__menu">
-          <ul class="menu" id="menu">
+          <ul class="menu menu--nojs" id="menu">
             <li class="menu-item"><a class="menu__link" href="#tasks">Задачи</a></li>
             <li class="menu-item"><a class="menu__link" href="#partner">Партнеры</a></li>
             <li class="menu-item"><a class="menu__link" href="#ideas">Идеи</a></li>
@@ -443,6 +438,12 @@
         <span><i class="scroll__arrow-up"></i></span>
       </a>
     </div>  <!-- Scroll to top end-->
-    <script src="js/custom.js"></script>
+    <!-- Scripts JS -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.mousewheel.min.js"></script>
+    <script src="js/jquery.jscrollpane.min.js"></script>
+    <script src="js/swiper.min.js"></script>
+    <script src="js/myfirst.min.js"></script>
+    <script src="js/custom.min.js"></script>
   </body>
 </html>
