--- a/index.html
+++ b/index.html
@@ -75,10 +75,18 @@
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide swiper-slide--slide1"></div>
-            <div class="swiper-slide swiper-slide--slide2"></div>
-            <div class="swiper-slide swiper-slide--slide3"></div>
-            <div class="swiper-slide swiper-slide--slide4"></div>
+            <div class="swiper-slide">
+              <a href="#" class="partner__link"><img src="images/auchan.jpg" alt="Partner1" class="partner__img"></a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="partner__link"><img src="images/multiplex.jpg" alt="Partner2" class="partner__img"></a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="partner__link"><img src="images/eurovision.jpg" alt="Partner3" class="partner__img"></a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="partner__link"><img src="images/yarich.jpg" alt="Partner4" class="partner__img"></a>
+            </div>
           </div>
           <!-- If we need navigation buttons -->
           <div class="swiper-button-prev swiper-button-prev--1"></div>
