Исправлен баг на слайдере результатов

--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide">
+            <div class="swiper-slide swiper-slide--partner">
               <a href="#" class="partner__link"><img src="images/auchan.jpg" alt="Partner1" class="partner__img"></a>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide swiper-slide--partner">
               <a href="#" class="partner__link"><img src="images/multiplex.jpg" alt="Partner2" class="partner__img"></a>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide swiper-slide--partner">
               <a href="#" class="partner__link"><img src="images/eurovision.jpg" alt="Partner3" class="partner__img"></a>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide swiper-slide--partner">
               <a href="#" class="partner__link"><img src="images/yarich.jpg" alt="Partner4" class="partner__img"></a>
             </div>
           </div>
