--- a/index.html
+++ b/index.html
@@ -99,35 +99,36 @@
           <h2 class="ideas__title">Идеи потребителей</h2>
           <div class="scroll-pane">
             <div class="ideas__wrapper">
-              <div class="ideas__slide ideas__slide--desktop">
+              <div class="ideas__slide">
                 <h3 class="ideas__author">Марина Павлова</h3>
                 <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
               </div>
-              <div class="ideas__slide ideas__slide--desktop">
+              <div class="ideas__slide">
                 <h3 class="ideas__author">Дмитрий</h3>
                 <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                   Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
               </div>
-              <div class="ideas__slide ideas__slide--desktop">
+              <div class="ideas__slide">
                 <h3 class="ideas__author">Андрей Иванов</h3>
                 <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
               </div>
-              <div class="ideas__slide ideas__slide--desktop">
+              <div class="ideas__slide">
                 <h3 class="ideas__author">Марина Павлова</h3>
                 <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
               </div>
-              <div class="ideas__slide ideas__slide--desktop">
+              <div class="ideas__slide">
                 <h3 class="ideas__author">Дмитрий</h3>
                 <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
               </div>
-              <div class="ideas__slide ideas__slide--desktop">
+              <div class="ideas__slide">
                 <h3 class="ideas__author">Андрей Иванов</h3>
                 <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
               </div>
             </div>
           </div>
-          <div class="ideas__btn ideas__btn--prev"></div>
-          <div class="ideas__btn ideas__btn--next"></div>
+<!--          <div class="ideas__btn ideas__btn--desktop ideas__btn--prev"></div>
+          <div class="ideas__btn ideas__btn--desktop ideas__btn--next"></div> -->
+          <p class="ideas__note">Напиши команде F&D, и мы свяжемся с твоей любимой кафешкой, пиццерией  гастро-баром,  рестораном  и  предложим им визит нашего диетолога-ревизора,  который  проведет  тщательную  экспертизу всего меню.</p>
           <a href="#contacts" class="ideas__link">Написать нам</a>
         </div>
       </section>
@@ -154,14 +155,14 @@
                   </li>
                   <li class="social__item">
                     <a href="" class="social__link">
-                      <svg class="social__icon" width="50" height="50" aria-label="Facebook">
+                      <svg class="social__icon" width="50" height="50" aria-label="Instagram">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social__item">
                     <a href="" class="social__link">
-                      <svg class="social__icon" width="50" height="50" aria-label="Facebook">
+                      <svg class="social__icon" width="50" height="50" aria-label="Skype">
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#skype"></use>
                       </svg>
                     </a>
@@ -333,7 +334,8 @@
               <img src="images/result1.jpg" alt="" class="result__photo" width="585" height="467">
               <div class="result__description">
                 <h3 class="result__name">Vegetable cafe</h3>
-                <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione </p>
+                <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, Lorem ipsum dolor sit amet, consectetur adipisicing elit, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat Lorem ipsum dolor sit amet, consectetur adipisicing elit, Lorem ipsum dolor sit amet, consectetur adipisicing elit, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione </p>
+                <a href="" class="result__link">Посмотреть фотоотчет</a>
                 <a href="" class="result__link">Перейти на сайт</a>
               </div>
             </div>
@@ -342,6 +344,7 @@
               <div class="result__description">
                 <h3 class="result__name">Meat restaurant</h3>
                 <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione</p>
+                <a href="" class="result__link">Посмотреть фотоотчет</a>
                 <a href="" class="result__link">Перейти на сайт</a>
               </div>
             </div>
@@ -350,6 +353,7 @@
               <div class="result__description">
                 <h3 class="result__name">Pancake</h3>
                 <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                <a href="" class="result__link">Посмотреть фотоотчет</a>
                 <a href="" class="result__link">Перейти на сайт</a>
               </div>
             </div>
@@ -358,6 +362,7 @@
               <div class="result__description">
                 <h3 class="result__name">Fast food</h3>
                 <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                <a href="" class="result__link">Посмотреть фотоотчет</a>
                 <a href="" class="result__link">Перейти на сайт</a>
               </div>
             </div>
@@ -432,6 +437,6 @@
     <script src="js/jquery.jscrollpane.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/myfirst.min.js"></script>
-    <script src="js/custom.min.js"></script>
+  <!--  <script src="js/custom.min.js"></script> -->
   </body>
 </html>
