Добавлена страница с фотоотчетом

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header class="header" id="home">
       <div class="header__top">
         <div class="header__panel">
-          <div class="header__logo"></div>
+          <div class="header__logo">
+            <img src="images/logo1.png" alt="Logo">
+          </div>
           <button class="header__toggle header__toggle--cross" type="button"></button>
         </div>
         <nav class="header__menu">
@@ -31,14 +33,16 @@
         </nav>
       </div>
       <h1 class="header__title">Food & diabetes</h1>
-      <p class="header__intro">Реализация социального проекта ХЕ-меню поможет решить ряд проблем и упростит жизнь людям страдающим сахарным диабетом (и не только)</p>
+      <p class="header__intro">Главная цель социального проекта FOOD & DIABETES направлена на решение повседневных проблем, с которыми сталкиваются люди страдающие диабетом, а еще множество других приверженцев здорового образа жизни.</p>
     </header>
 
     <main class="content">
 
       <section class="about">
         <h2 class="about__title">О проекте</h2>
-        <p class="about__text">К сожалению, с каждым годом ситуация с увеличением количества людей, страдающих сахарным диабетом, ожирением или другим заболеванием, связанным с нарушением обмена веществ, в Украине и во всем мире набирает обороты. И вы не поверите, насколько конечный результат нашего проекта упростит жизнь людям, которым жизненно важно следить и подсчитывать Ккал, Белки, Жиры, Углеводы и ХЕ. Также, эта информация будет полезна для людей, которые следят за правильным и здоровым питанием</p>
+        <p class="about__text">Мы — F&D, мы считаем, что нужно знать, что мы едим, сколько и чего есть в каждом блюде, которое мы заказываем. Знакома ситуация, когда решаешь начать питаться по-новому (с понедельника) и выход — или кушать дома, или носиться с судочками. Ведь как иначе узнать, что ты кушаешь и хватит ли тебе калорий, жиров, углеводов на сегодня в любимом сэндвиче в кафешке напротив. А ведь никак. Потому мы предлагаем ввести в меню заведений еще одну строку, в которой будет указано точное количество жиров, калорий, ХЕ (хлебных единиц), углеводов.</p>
+        <p class="about__text">Нужна всего одна строка в меню заведения, которая облегчит жизнь тысячи людей. Это необходимо в первую очередь тем, кто нуждается в строгой регуляции питания, тем, для кого излишнее количество сахара может иметь последствия по-хуже невозможности влезть в любимые джинсы. Во вторых, тем, кто решил следить за своим здоровьем уже сейчас, а не когда скажет дяденька доктор. В третьих, для активных и ответственных родителей малышей, которые смущаются выяснять у официанта полезность блюда.</p>
+        <p class="about__text">F&D — это команда супергероев, которая видит проблемы и знает, как их можно решить.</p>
       </section>
 
       <section class="tasks" id="tasks">
@@ -126,8 +130,7 @@
               </div>
             </div>
           </div>
-<!--          <div class="ideas__btn ideas__btn--desktop ideas__btn--prev"></div>
-          <div class="ideas__btn ideas__btn--desktop ideas__btn--next"></div> -->
+
           <p class="ideas__note">Напиши команде F&D, и мы свяжемся с твоей любимой кафешкой, пиццерией  гастро-баром,  рестораном  и  предложим им визит нашего диетолога-ревизора,  который  проведет  тщательную  экспертизу всего меню.</p>
           <a href="#contacts" class="ideas__link">Написать нам</a>
         </div>
@@ -335,7 +338,7 @@
               <div class="result__description">
                 <h3 class="result__name">Vegetable cafe</h3>
                 <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, Lorem ipsum dolor sit amet, consectetur adipisicing elit, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat Lorem ipsum dolor sit amet, consectetur adipisicing elit, Lorem ipsum dolor sit amet, consectetur adipisicing elit, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione </p>
-                <a href="" class="result__link">Посмотреть фотоотчет</a>
+                <a href="gallery.html" class="result__link">Посмотреть фотоотчет</a>
                 <a href="" class="result__link">Перейти на сайт</a>
               </div>
             </div>
@@ -344,7 +347,7 @@
               <div class="result__description">
                 <h3 class="result__name">Meat restaurant</h3>
                 <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione</p>
-                <a href="" class="result__link">Посмотреть фотоотчет</a>
+                <a href="gallery.html" class="result__link">Посмотреть фотоотчет</a>
                 <a href="" class="result__link">Перейти на сайт</a>
               </div>
             </div>
@@ -353,7 +356,7 @@
               <div class="result__description">
                 <h3 class="result__name">Pancake</h3>
                 <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-                <a href="" class="result__link">Посмотреть фотоотчет</a>
+                <a href="gallery.html" class="result__link">Посмотреть фотоотчет</a>
                 <a href="" class="result__link">Перейти на сайт</a>
               </div>
             </div>
@@ -362,7 +365,7 @@
               <div class="result__description">
                 <h3 class="result__name">Fast food</h3>
                 <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-                <a href="" class="result__link">Посмотреть фотоотчет</a>
+                <a href="gallery.html" class="result__link">Посмотреть фотоотчет заведения</a>
                 <a href="" class="result__link">Перейти на сайт</a>
               </div>
             </div>
@@ -434,9 +437,11 @@
     <!-- Scripts JS -->
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.mousewheel.min.js"></script>
+    <script src="js/custom_menu.min.js"></script>
     <script src="js/jquery.jscrollpane.min.js"></script>
+    <script src="js/my_scroll.min.js"></script>
     <script src="js/swiper.min.js"></script>
-    <script src="js/myfirst.min.js"></script>
+    <script src="js/my_swiper.min.js"></script>
   <!--  <script src="js/custom.min.js"></script> -->
   </body>
 </html>
