Исправлен баг с подключением скриптов, использующих jQuery

--- a/gallery.html
+++ b/gallery.html
@@ -92,7 +92,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.mousewheel.min.js"></script>
     <script src="js/jquery.jscrollpane.min.js"></script>
-    <script src="js/my_scroll.min.js"></script>
+    <script src="js/my_scroll.js"></script>
   <!--  <script src="js/custom.min.js"></script> -->
   </body>
 </html>
