--- a/index.html
+++ b/index.html
@@ -437,11 +437,11 @@
     <!-- Scripts JS -->
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.mousewheel.min.js"></script>
-    <script src="js/custom_menu.min.js"></script>
+    <script src="js/custom_menu.js"></script>
     <script src="js/jquery.jscrollpane.min.js"></script>
-    <script src="js/my_scroll.min.js"></script>
+    <script src="js/my_scroll.js"></script>
     <script src="js/swiper.min.js"></script>
-    <script src="js/my_swiper.min.js"></script>
+    <script src="js/my_swiper.js"></script>
   <!--  <script src="js/custom.min.js"></script> -->
   </body>
 </html>
